--- a/1.html
+++ b/1.html
@@ -1,19 +1,48 @@
 <!doctype html>
 <html>
 <head>
-  <title> WEB1 - HTML</title>
-<meta charset="utf-8">
-</head>
+  <title> WEB1 - Welcome</title>
+  <meta charset="utf-8">
+  <style>
+  body{
+    margin:0;
+  }
+     a {
+        color:black;
+        text-decoration: none;
+    }
+    h1 {
+      font-size: 45px;
+      text-align: center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0px;
+      padding:20px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns: 150px 1fr;
+    }
+  </style>
 
+</head>
 <body>
-<h1><a href="index.html">WEB</h1>
- <ol>
-  <li><a href="1.html"> HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html"> JavaScript</a></li>
-</ol>
-<h2>HTML</h2>
-<p><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">
+  <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
+   <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+   </ol>
+
+     <div>
+    <h2>HTML</h2>
+  <p style="margin-bottom: 45px;"><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">
   Hypertext Markup Language (HTML)</a>
  is the standard markuplanguage for
   <strong>creating <u>web</u>
@@ -23,9 +52,10 @@
  into multimedia web pages.
  HTML describes the structure of a web page semantically
  and originally included cues for
- the appearance of the document.
- <img src="coding.jpg" width="100%">
-</p><p style="margin-top:45px;">
+ the appearance of the document.</p>
+ <img src="coding.jpg" width="50%" height="40%">
+
+ <p style="margin-top:50px;">
  HTML elements are the building blocks of HTML pages.
   With HTML constructs, images and other objects,
  such as interactive forms, may be embedded into the rendered page.
@@ -33,5 +63,7 @@
   structural semantics for text such as headings, paragraphs, lists, links,
  quotes and other items. HTML elements are delineated by tags,
  written using angle brackets.</p>
+   </div>
+  </div>
 </body>
   </html>
