--- a/3.html
+++ b/3.html
@@ -3,16 +3,44 @@
 <head>
   <title> WEB1 - JavaScript</title>
 <meta charset="utf-8">
+<style>
+body {
+      margin:0;
+    }
+   a {
+      color:black;
+      text-decoration: none;
+  }
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    border-bottom:1px solid gray;
+    margin:0;
+    padding:20px;
+  }
+  ol{
+    border-right:1px solid gray;
+    width:100px;
+    margin:0px;
+    padding:20px;
+  }
+  #grid{
+    display:grid;
+    grid-template-columns: 150px 1fr;
+  }
+</style>
 </head>
 
 
 <body>
-  <h1><a href="index.html">WEB</h1>
+  <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
  <ol>
   <li><a href="1.html"> HTML</a></li>
   <li><a href="2.html"> CSS</a></li>
   <li><a href="3.html"> JavaScript</a></li>
 </ol>
+<div>
 <h2>JavaScript</h2>
 <p>
  JavaScript (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, is a programming
@@ -34,6 +62,9 @@ for working with text, dates, regular expressions,
 standard data structures, and the Document Object Model (DOM).
 However, the language itself does not include any input/output (I/O),
 such as networking, storage, or graphics facilities,
-as the host environment (usually a web browser) provides those APIs.</p>
+as the host environment (usually a web browser) provides those APIs.
+</p>
+</div>
+</div>
 </body>
   </html>
