--- a/index.html
+++ b/index.html
@@ -2,38 +2,68 @@
 <html>
 <head>
   <title> WEB1 - Welcome</title>
-<meta charset="utf-8">
+  <meta charset="utf-8">
+  <style>
+  body{
+    margin:0;
+  }
+     a {
+        color:black;
+        text-decoration: none;
+    }
+    h1 {
+      font-size: 45px;
+      text-align: center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0px;
+      padding:20px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns: 150px 1fr;
+    }
+  </style>
+
 </head>
-
-
 <body>
-  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
- <ol>
-  <li><a href="1.html"><font color="red">HTML</font></a></li>
-  <li><a href="2.html"><font color="red">CSS</font></a></li>
-  <li><a href="3.html"><font color="red">JavaScript</font></a></li>
-</ol>
-<p>
+  <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
+   <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+   </ol>
+
+     <div>
+    <h2>WEB</h2>
+  <p>The World Wide Web (WWW), commonly known as the Web,
+  is an information system where documents and other web
+  resources are identified by Uniform Resource Locators
+  (URLs, such as https://example.com/),
+  which may be interlinked by hypertext,
+  and are accessible over the Internet.
+  [1][2] The resources of the Web are transferred
+  via the Hypertext Transfer Protocol (HTTP)
+ and may be accessed by users by a software application
+  called a web browser and are published by a software
+  application called a web server. The World Wide Web
+  is not synonymous with the Internet, which pre-existed
+  the Web in some form by over two decades and upon whose
+  technologies the Web is built.</p>
+   <p>
   <iframe width="560" height="315" src=
   "https://www.youtube.com/embed/7T7r_oSp0SE"
   frameborder="0" allow="accelerometer; autoplay;
   encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen></iframe>
-</p>
-<h2>WEB</h2>
-<p>The World Wide Web (WWW), commonly known as the Web,
-is an information system where documents and other web
-resources are identified by Uniform Resource Locators
-(URLs, such as https://example.com/),
-which may be interlinked by hypertext,
-and are accessible over the Internet.
-[1][2] The resources of the Web are transferred
-via the Hypertext Transfer Protocol (HTTP)
-and may be accessed by users by a software application
-called a web browser and are published by a software
-application called a web server. The World Wide Web
-is not synonymous with the Internet, which pre-existed
-the Web in some form by over two decades and upon whose
-technologies the Web is built.</p>
+   </p>
+   </div>
+  </div>
 </body>
   </html>
