--- a/1.html
+++ b/1.html
@@ -3,7 +3,8 @@
 <head>
   <title> WEB1 - Welcome</title>
   <meta charset="utf-8">
-  <style>
+  <link rel="stylesheet" href="style.css">
+<!-- <style>
   body{
     margin:0;
   }
@@ -16,7 +17,7 @@
       text-align: center;
       border-bottom:1px solid gray;
       margin:0;
-      padding:20px;
+      padding:33px;
     }
     ol{
       border-right:1px solid gray;
@@ -24,12 +25,29 @@
       margin:0px;
       padding:20px;
     }
-    #grid{
+    #grid #article{
+      padding-left:25px;
+    }
+    #grid ol{
+      padding-left: 33px;
+    }
+    #grid {
       display:grid;
       grid-template-columns: 150px 1fr;
     }
+    @media(max-width:800px){
+      #grid {
+        display:block;
+      }
+      ol{
+        border-right:none;
+      }
+      h1 {
+        border-bottom:none;
+      }
+    }
   </style>
-
+-->
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -40,7 +58,7 @@
     <li><a href="3.html">JavaScript</a></li>
    </ol>
 
-     <div>
+     <div id="article">
     <h2>HTML</h2>
   <p style="margin-bottom: 45px;"><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">
   Hypertext Markup Language (HTML)</a>
