--- a/2.html
+++ b/2.html
@@ -3,34 +3,8 @@
 <head>
   <title> WEB1 - CSS</title>
 <meta charset="utf-8">
-<style>
-body{
-  margin:0;
-}
-   a {
-      color:black;
-      text-decoration: none;
-  }
-  h1 {
-    font-size: 45px;
-    text-align: center;
-    border-bottom:1px solid gray;
-    margin:0;
-    padding:20px;
-  }
-  ol{
-    border-right:1px solid gray;
-    width:100px;
-    margin:0px;
-    padding:20px;
-  }
-  #grid{
-    display:grid;
-    grid-template-columns: 150px 1fr;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
-
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -40,7 +14,7 @@ body{
   <li><a href="2.html" > CSS</a></li>
   <li><a href="3.html"> JavaScript</a></li>
    </ol>
-<div>
+<div id="article">
 <h2>CSS</h2>
 <p>
 Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2] CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file which reduces complexity and repetition in the structural content as well as enabling the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
