--- a/3.html
+++ b/3.html
@@ -3,33 +3,9 @@
 <head>
   <title> WEB1 - JavaScript</title>
 <meta charset="utf-8">
-<style>
-body {
-      margin:0;
-    }
-   a {
-      color:black;
-      text-decoration: none;
-  }
-  h1 {
-    font-size: 45px;
-    text-align: center;
-    border-bottom:1px solid gray;
-    margin:0;
-    padding:20px;
-  }
-  ol{
-    border-right:1px solid gray;
-    width:100px;
-    margin:0px;
-    padding:20px;
-  }
-  #grid{
-    display:grid;
-    grid-template-columns: 150px 1fr;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
+
 
 
 <body>
@@ -40,7 +16,7 @@ body {
   <li><a href="2.html"> CSS</a></li>
   <li><a href="3.html"> JavaScript</a></li>
 </ol>
-<div>
+<div id="article">
 <h2>JavaScript</h2>
 <p>
  JavaScript (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, is a programming
