--- a/index.html
+++ b/index.html
@@ -3,33 +3,7 @@
 <head>
   <title> WEB1 - Welcome</title>
   <meta charset="utf-8">
-  <style>
-  body{
-    margin:0;
-  }
-     a {
-        color:black;
-        text-decoration: none;
-    }
-    h1 {
-      font-size: 45px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-    ol{
-      border-right:1px solid gray;
-      width:100px;
-      margin:0px;
-      padding:20px;
-    }
-    #grid{
-      display:grid;
-      grid-template-columns: 150px 1fr;
-    }
-  </style>
-
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -39,8 +13,7 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
    </ol>
-
-     <div>
+     <div id="article">
     <h2>WEB</h2>
   <p>The World Wide Web (WWW), commonly known as the Web,
   is an information system where documents and other web
