--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <title> WEB1 - Welcome</title>
@@ -9,8 +9,8 @@
   <h1><a href="index.html">WEB</a></h1>
   
   <input type="button" value="night" onclick="
+  var target = document.querySelector('body');
   if (this.value === 'night'){
-    var target = document.querySelector('body');
   target.style.backgroundColor ='black';
   target.style.color ='white';
   this.value = 'day';
@@ -20,7 +20,6 @@
   this.value = 'night';
 }
 ">
-  
   <div id="grid">
    <ol>
     <li><a href="1.html">HTML</a></li>
@@ -52,16 +51,5 @@
    </p>
    </div>
   </div>
-  <input type="button" value="night" onclick="
-  if (this.value === 'night'){
-  document.querySelector('body').style.backgroundColor ='black';
-  document.querySelector('body').style.color ='white';
-  this.value = 'day';
- } else {
-  document.querySelector('body').style.backgroundColor ='white';
-  document.querySelector('body').style.color ='black';
-  this.value = 'night';
-}
-">
 </body>
   </html>
