--- a/index.html
+++ b/index.html
@@ -2,54 +2,59 @@
 <html>
 
 <head>
-  <title> WEB1 - Welcome</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+    <title> WEB1 - Welcome</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="color: blue">WEB</a></h1>
 
-  <input type="button" value="night" onclick="
+    <input type="button" value="night" onclick="
   var target = document.querySelector('body');
   if (this.value === 'night'){
   target.style.backgroundColor ='black';
   target.style.color ='white';
   this.value = 'day';
+  var alist = document.querySelectorAll('a');
+var i= 0;
+while(i<alist.length){
+console.log(alist[i]);
+alist[i].style.color = 'powderblue';
+i=i+1;
+}
+
  } else {
   target.style.backgroundColor ='white';
   target.style.color ='black';
   this.value = 'night';
+  
+  var alist = document.querySelectorAll('a');
+  var i= 0;
+while(i<alist.length){
+console.log(alist[i]);
+alist[i].style.color = 'blue';
+i=i+1;
+}
 }
 ">
-  <div id="grid">
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <div id="article">
-      <h2>WEB</h2>
-      <p>The World Wide Web (WWW), commonly known as the Web,
-        is an information system where documents and other web
-        resources are identified by Uniform Resource Locators
-        (URLs, such as https://example.com/),
-        which may be interlinked by hypertext,
-        and are accessible over the Internet.
-        [1][2] The resources of the Web are transferred
-        via the Hypertext Transfer Protocol (HTTP)
-        and may be accessed by users by a software application
-        called a web browser and are published by a software
-        application called a web server. The World Wide Web
-        is not synonymous with the Internet, which pre-existed
-        the Web in some form by over two decades and upon whose
-        technologies the Web is built.</p>
-      <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay;
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <h2>WEB</h2>
+            <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hypertext,
+                and are accessible over the Internet. [1][2] The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software
+                application called a web server. The World Wide Web is not synonymous with the Internet, which pre-existed the Web in some form by over two decades and upon whose technologies the Web is built.</p>
+            <p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay;
   encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </p>
+            </p>
+        </div>
     </div>
-  </div>
 
 </body>
 
