--- a/index.html
+++ b/index.html
@@ -5,38 +5,43 @@
     <title> WEB1 - Welcome</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script>
+        function nightDayHandler(self) {
+            var target = document.querySelector('body');
+            if (self.value === 'night') {
+                target.style.backgroundColor = 'black';
+                target.style.color = 'white';
+                self.value = 'day';
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while (i < alist.length) {
+                    console.log(alist[i]);
+                    alist[i].style.color = 'powderblue';
+                    i = i + 1;
+                }
+
+            } else {
+                target.style.backgroundColor = 'white';
+                target.style.color = 'black';
+                self.value = 'night';
+
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while (i < alist.length) {
+                    console.log(alist[i]);
+                    alist[i].style.color = 'blue';
+                    i = i + 1;
+                }
+            }
+        }
+    </script>
 </head>
 
 <body>
     <h1><a href="index.html" style="color: blue">WEB</a></h1>
 
     <input type="button" value="night" onclick="
-  var target = document.querySelector('body');
-  if (this.value === 'night'){
-  target.style.backgroundColor ='black';
-  target.style.color ='white';
-  this.value = 'day';
-  var alist = document.querySelectorAll('a');
-var i= 0;
-while(i<alist.length){
-console.log(alist[i]);
-alist[i].style.color = 'powderblue';
-i=i+1;
-}
-
- } else {
-  target.style.backgroundColor ='white';
-  target.style.color ='black';
-  this.value = 'night';
-  
-  var alist = document.querySelectorAll('a');
-  var i= 0;
-while(i<alist.length){
-console.log(alist[i]);
-alist[i].style.color = 'blue';
-i=i+1;
-}
-}
+      nightDayHandler(this);
 ">
     <div id="grid">
         <ol>
