object를 이용한 source의 정리

--- a/index.html
+++ b/index.html
@@ -6,32 +6,39 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script>
+        var Links = {
+            SetColor: function(color) {
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while (i < alist.length) {
+                    alist[i].style.color = color;
+                    i = i + 1;
+                }
+            }
+        }
+        var Body = {
+            setColor: function(color) {
+                document.querySelector('body').style.color = color;
+            },
+            SetBackgroundColor: function(color) {
+                document.querySelector('body').style.backgroundColor = color;
+            }
+        }
+
         function nightDayHandler(self) {
             var target = document.querySelector('body');
             if (self.value === 'night') {
-                target.style.backgroundColor = 'black';
-                target.style.color = 'white';
+                Body.SetBackgroundColor('black');
+                Body.setColor('white');
                 self.value = 'day';
-                var alist = document.querySelectorAll('a');
-                var i = 0;
-                while (i < alist.length) {
-                    console.log(alist[i]);
-                    alist[i].style.color = 'powderblue';
-                    i = i + 1;
-                }
 
+                Links.SetColor('powderblue');
             } else {
-                target.style.backgroundColor = 'white';
-                target.style.color = 'black';
+                Body.SetBackgroundColor('white');
+                Body.setColor('black');
                 self.value = 'night';
 
-                var alist = document.querySelectorAll('a');
-                var i = 0;
-                while (i < alist.length) {
-                    console.log(alist[i]);
-                    alist[i].style.color = 'blue';
-                    i = i + 1;
-                }
+                Links.SetColor('blue');
             }
         }
     </script>
