--- a/1.html
+++ b/1.html
@@ -2,90 +2,39 @@
 <html>
 
 <head>
-  <title> WEB1 - Welcome</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <!-- <style>
-  body{
-    margin:0;
-  }
-     a {
-        color:black;
-        text-decoration: none;
-    }
-    h1 {
-      font-size: 45px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:33px;
-    }
-    ol{
-      border-right:1px solid gray;
-      width:100px;
-      margin:0px;
-      padding:20px;
-    }
-    #grid #article{
-      padding-left:25px;
-    }
-    #grid ol{
-      padding-left: 33px;
-    }
-    #grid {
-      display:grid;
-      grid-template-columns: 150px 1fr;
-    }
-    @media(max-width:800px){
-      #grid {
-        display:block;
-      }
-      ol{
-        border-right:none;
-      }
-      h1 {
-        border-bottom:none;
-      }
-    }
-  </style>
--->
+    <title> WEB1 - Welcome</title>
+    <meta charset="utf-8">
+    <script src="colors.js"></script>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <div id="grid">
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
+    <h1><a href="index.html">WEB</a></h1>
+    <input type="button" value="night" onclick="
+      nightDayHandler(this);
+">
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
 
-    <div id="article">
-      <h2>HTML</h2>
-      <p style="margin-bottom: 45px;"><a href="https://www.w3.org/TR/html51/" target="_blank"
-          title="html5 specification">
-          Hypertext Markup Language (HTML)</a>
-        is the standard markuplanguage for
-        <strong>creating <u>web</u>
-          pages</strong> and web applications.
-        Web browsers receive HTML documents from
-        a web server or from local storage and render them
-        into multimedia web pages.
-        HTML describes the structure of a web page semantically
-        and originally included cues for
-        the appearance of the document.</p>
-      <img src="coding.jpg" width="50%" height="40%">
+        <div id="article">
+            <h2>HTML</h2>
+            <p style="margin-bottom: 45px;"><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">
+          Hypertext Markup Language (HTML)</a> is the standard markuplanguage for
+                <strong>creating <u>web</u>
+          pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally
+                included cues for the appearance of the document.</p>
+            <img src="coding.jpg" width="50%" height="40%">
 
-      <p style="margin-top:50px;">
-        HTML elements are the building blocks of HTML pages.
-        With HTML constructs, images and other objects,
-        such as interactive forms, may be embedded into the rendered page.
-        It provides a means to create structured documents by denoting
-        structural semantics for text such as headings, paragraphs, lists, links,
-        quotes and other items. HTML elements are delineated by tags,
-        written using angle brackets.</p>
+            <p style="margin-top:50px;">
+                HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics
+                for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+        </div>
     </div>
-  </div>
 </body>
 
 </html>
