--- a/index.html
+++ b/index.html
@@ -5,43 +5,7 @@
     <title> WEB1 - Welcome</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script>
-        var Links = {
-            SetColor: function(color) {
-                var alist = document.querySelectorAll('a');
-                var i = 0;
-                while (i < alist.length) {
-                    alist[i].style.color = color;
-                    i = i + 1;
-                }
-            }
-        }
-        var Body = {
-            setColor: function(color) {
-                document.querySelector('body').style.color = color;
-            },
-            SetBackgroundColor: function(color) {
-                document.querySelector('body').style.backgroundColor = color;
-            }
-        }
-
-        function nightDayHandler(self) {
-            var target = document.querySelector('body');
-            if (self.value === 'night') {
-                Body.SetBackgroundColor('black');
-                Body.setColor('white');
-                self.value = 'day';
-
-                Links.SetColor('powderblue');
-            } else {
-                Body.SetBackgroundColor('white');
-                Body.setColor('black');
-                self.value = 'night';
-
-                Links.SetColor('blue');
-            }
-        }
-    </script>
+    <script src="colors.js"></script>
 </head>
 
 <body>
